...

object DataPreview {
    val previewCrypto by lazy {
        Crypto(
            base = BaseCrypto(
                id = "bitcoin",
                name = "Bitcoin",
                symbol = "BTC",
                imageUrl = "https://assets.coingecko.com/coins/images/1/large/bitcoin.png?1547033579",
            ),
            price = CryptoPrice(
                LabelValue(31827.0, "$31 827"),
                vsCurrencyCode = "USD",
...
